--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,6 +14,6 @@
         "run_at": "document_end"
       }
     ],
-    "permissions": ["storage"],
-    "host_permissions": ["*://*.instagram.com/*", "*://*.cdninstagram.com/*"]
+    "permissions": ["storage", "downloads"],
+    "host_permissions": ["*://*.instagram.com/*", "*://*.cdninstagram.com/*", "https://i.instagram.com/*", "*://*.fbcdn.net/*"]
 }
